# idea-reaction

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/actions/publish/: action.yml
.github/workflows/: build.yaml  ci.yaml  clippy.yaml  fmt.yaml  release.yaml
.zed/: settings.json
assets/: config.yaml
docker-redmine/: compose.yaml
src/: actions.rs  config.rs  events.rs  handler.rs  main.rs  parsers.rs
src/client/: discord.rs
src/redmine/: actions.rs  mod.rs  model.rs
