[package]
name = "idea-reaction"
version = "0.3.0"
edition = "2021"
description = "アイデア投稿履歴のリアクションを制限する Discord Bot"
authors = ["m1sk9 <me@m1sk9.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
experiments_thinking_emoji = []

[dependencies]
anyhow = { version = "1.0.82" }
dotenvy = { version = "0.15.7" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
envy = { version = "0.4.2" }
typed-builder = { version = "0.19.1" }
regex = { version = "1.10.6" }

[dependencies.serenity]
version = "0.12.1"
features = ["client", "gateway", "model", "cache", "rustls_backend"]
default-features = false

[dependencies.serde]
version = "1.0.208"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "rt-multi-thread"]

[dependencies.reqwest]
version = "0.12.5"
features = ["json"]
